# Braccio_drivers

./: .gitignore  README.md  doxygen_config.txt  gen_doxygen.sh
Braccio_driver/: BraccioArm.cpp  BraccioArm.hpp  Braccio_driver.ino  Debug.hpp  Parser.cpp  Parser.hpp  ServoControl.cpp  ServoControl.hpp
Braccio_firmware/: Debug.hpp  Parser.cpp  ServoControl.cpp  ServoControl.hpp
braccio_firmware/braccio_firmware/: BraccioArm.cpp  BraccioArm.hpp  Debug.hpp  Parser.hpp  ServoControl.cpp  ServoControl.hpp  braccio_firmware.ino
braccio_interface/: CMakeLists.txt  config.txt  demo.sh  package.xml
braccio_interface/include/: File.hpp  HigherLevelInterface.hpp  Services.hpp  ServoInfo.hpp
braccio_interface/launch/: launch.launch
braccio_interface/lib/: HardwareInterface.cpp  HardwareInterface.hpp
braccio_interface/msg/: MoveServoToPos.msg  MoveToPosition.msg
braccio_interface/src/: File.cpp  HigherLevelInterface.cpp  Services.cpp  main.cpp
braccio_kinematics/: CMakeLists.txt  package.xml
braccio_kinematics/include/: Kinematics.hpp  Matrix.hpp  Matrix.inc
braccio_kinematics/launch/: launch.launch
braccio_kinematics/src/: Kinematics.cpp  main.cpp
braccio_vision/: CMakeLists.txt  package.xml
braccio_vision/include/: Template.hpp  TemplateMatcher.hpp
braccio_vision/launch/: launch.launch
braccio_vision/msg/: ImagePoint.msg
braccio_vision/scripts/: python.py
braccio_vision/src/: Template.cpp  TemplateMatcher.cpp  main.cpp
