<?xml version="1.0"?>
<package format="2">
  <name>braccio_kinematics</name>
  <version>0.0.0</version>
  <description>The braccio_kinematics package</description>

  <maintainer email="davidbergevoet@live.nl">David</maintainer>

  <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>braccio_interface</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>braccio_interface</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>message_runtime</exec_depend>


    <export>

  </export>
</package>